Add Sonatype required pom information and javadoc